--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.15",
     "@fortawesome/free-solid-svg-icons": "^5.7.2",
     "@lcluber/pdfvjs": "^0.3.0",
+    "animejs": "^3.0.1",
     "babel-polyfill": "^6.26.0",
     "choo": "^6.13.1",
     "choo-service-worker": "^2.4.0",
