--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "PREreview2 demo for development, user testing etc.",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "docs": "markdown-folder-to-html server/docs"
   },
   "keywords": [],
   "author": "",
@@ -12,12 +13,14 @@
   "dependencies": {
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
+    "express-markdown": "0.0.6",
     "express-session": "^1.16.1",
     "got": "^9.6.0",
     "passport": "^0.4.0",
     "passport-orcid": "0.0.3"
   },
   "devDependencies": {
-    "bankai": "^9.15.0"
+    "bankai": "^9.15.0",
+    "markdown-folder-to-html": "^2.1.2"
   }
 }
