--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "compression": "^1.7.4",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "express-markdown": "0.0.6",
