--- a/package.json
+++ b/package.json
@@ -4,21 +4,39 @@
   "description": "PREreview2 demo for development, user testing etc.",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "pm2 start index.js --name prereview",
     "docs": "markdown-folder-to-html server/docs"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "compression": "^1.7.4",
+    "animejs": "^3.0.1",
+    "babel-polyfill": "^6.26.0",
+    "choo": "^6.13.3",
+    "choo-devtools": "^2.5.1",
+    "choo-service-worker": "^2.4.0",
+    "deep_find": "^1.0.1",
+    "deepdash": "^4.2.10",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "express-markdown": "0.0.6",
     "express-session": "^1.16.1",
+    "fake-identity": "^1.0.6",
+    "fast-xml-parser": "^3.12.17",
     "got": "^9.6.0",
+    "he": "^1.2.0",
+    "hyphenate-style-name": "^1.0.3",
+    "joi": "^14.3.1",
+    "keyfinder": "^1.0.0",
+    "lorem-ipsum": "^2.0.1",
+    "lunr": "^2.3.6",
+    "nano": "^8.1.0",
+    "nanocomponent": "^6.5.2",
     "passport": "^0.4.0",
-    "passport-orcid": "0.0.3"
+    "passport-orcid": "0.0.3",
+    "quill": "^1.3.6",
+    "tachyons": "^4.11.1"
   },
   "devDependencies": {
     "bankai": "^9.15.0",
