--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "PREreview2 demo for development, user testing etc.",
   "main": "index.js",
   "scripts": {
-    "start": "pm2 start index.js --name prereview",
+    "dev": "ENVIRONMENT=dev node index.js",
+    "start": "ENVIRONMENT=prod pm2 start index.js --name prereview",
+    "stop": "pm2 stop prereview",
+    "restart": "pm2 restart prereview",
     "docs": "markdown-folder-to-html server/docs"
   },
   "keywords": [],
@@ -18,7 +21,6 @@
     "choo-service-worker": "^2.4.0",
     "deep_find": "^1.0.1",
     "deepdash": "^4.2.10",
-    "dotenv": "^7.0.0",
     "express": "^4.16.4",
     "express-markdown": "0.0.6",
     "express-session": "^1.16.1",
@@ -35,11 +37,14 @@
     "nanocomponent": "^6.5.2",
     "passport": "^0.4.0",
     "passport-orcid": "0.0.3",
+    "pg-promise": "^9.0.0",
     "quill": "^1.3.6",
     "tachyons": "^4.11.1"
   },
   "devDependencies": {
     "bankai": "^9.15.0",
-    "markdown-folder-to-html": "^2.1.2"
+    "dotenv": "^7.0.0",
+    "markdown-folder-to-html": "^2.1.2",
+    "pm2": "^3.5.1"
   }
 }
