--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "hyphenate-style-name": "^1.0.3",
     "joi": "^14.3.1",
     "keyfinder": "^1.0.0",
+    "knex": "^0.19.1",
     "lorem-ipsum": "^2.0.1",
     "lunr": "^2.3.6",
     "morgan": "^1.9.1",
@@ -42,9 +43,11 @@
     "nanocomponent": "^6.5.2",
     "passport": "^0.4.0",
     "passport-orcid": "0.0.3",
-    "pg-promise": "^9.0.0",
+    "pg": "^7.12.0",
     "quill": "^1.3.6",
-    "tachyons": "^4.11.1"
+    "sql-template-strings": "^2.2.2",
+    "tachyons": "^4.11.1",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "bankai": "^9.15.0",
