resolve orcid issues

--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "test": "xo",
     "lint": "xo",
     "format": "xo --fix",
-    "dev": "ENVIRONMENT=dev node index.js",
+    "initdb:dev": "ENVIRONMENT=dev node scripts/initdb.js",
+    "initdb:prod": "ENVIRONMENT=prod node scripts/initdb.js",
+    "dev": "NODE_ENV=dev ENVIRONMENT=dev node index.js",
     "start": "ENVIRONMENT=prod pm2 start index.js --name prereview",
     "stop": "pm2 stop prereview",
     "restart": "pm2 restart prereview",
@@ -19,6 +21,7 @@
   "dependencies": {
     "animejs": "^3.0.1",
     "babel-polyfill": "^6.26.0",
+    "body-parser": "^1.19.0",
     "choo": "^6.13.3",
     "choo-devtools": "^2.5.1",
     "choo-service-worker": "^2.4.0",
@@ -38,6 +41,7 @@
     "knex": "^0.19.1",
     "lorem-ipsum": "^2.0.1",
     "lunr": "^2.3.6",
+    "method-override": "^3.0.0",
     "morgan": "^1.9.1",
     "nano": "^8.1.0",
     "nanocomponent": "^6.5.2",
