--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "passport-orcid": "0.0.3",
     "pg": "^7.12.0",
     "quill": "^1.3.6",
+    "serve-favicon": "^2.5.0",
     "sql-template-strings": "^2.2.2",
     "tachyons": "^4.11.1",
     "uuid": "^3.3.2"
