--- a/package.json
+++ b/package.json
@@ -45,8 +45,10 @@
     "morgan": "^1.9.1",
     "nano": "^8.1.0",
     "nanocomponent": "^6.5.2",
+    "orcid-utils": "^1.0.3",
     "passport": "^0.4.0",
     "passport-orcid": "0.0.3",
+    "pdfjs-dist": "^2.1.266",
     "pg": "^7.12.0",
     "quill": "^1.3.6",
     "serve-favicon": "^2.5.0",
