--- a/client/package.json
+++ b/client/package.json
@@ -24,11 +24,13 @@
     "lorem-ipsum": "^2.0.0",
     "lunr": "^2.3.6",
     "markdown-string": "^0.2.0",
+    "markdown-toc": "^1.2.0",
     "node-quill-converter": "^0.3.2",
     "passport-orcid": "0.0.3",
     "pdfjs-dist": "^2.0.943",
     "quill": "^1.3.6",
     "quill-markdown-shortcuts": "0.0.6",
+    "remarkable": "^1.7.4",
     "sheetify": "^7.3.3",
     "tachyons": "^4.11.1"
   },
