--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "fast-xml-parser": "^3.12.17",
     "fetch-base64": "^2.1.2",
     "got": "^9.6.0",
+    "gravatar": "^1.8.0",
     "he": "^1.2.0",
     "helmet": "^3.20.0",
     "hyphenate-style-name": "^1.0.3",
