--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "bankai": "^9.15.0",
     "batch-stream": "^0.1.3",
     "dotenv": "^7.0.0",
+    "express-list-endpoints": "^4.0.1",
     "flush-write-stream": "^2.0.0",
     "hyperdb": "^3.5.0",
     "markdown-folder-to-html": "^2.1.2",
