--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "indexdb:dev": "ENVIRONMENT=dev node scripts/indexdb.js",
     "initdb:dev": "ENVIRONMENT=dev node scripts/initdb.js",
     "initdb:prod": "ENVIRONMENT=prod node scripts/initdb.js",
-    "seeddb:dev": "ENVIRONMENT=dev node scripts/seeddb.js",
+    "seeddb:dev": "ENVIRONMENT=dev node --max-old-space-size=10000 scripts/seeddb.js",
     "seeddb:prod": "ENVIRONMENT=prod node scripts/seeddb.js",
     "dev": "NODE_ENV=dev ENVIRONMENT=dev node index.js",
     "start": "NODE_ENV=prod ENVIRONMENT=prod node index.js",
