--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "morgan": "^1.9.1",
     "nano": "^8.1.0",
     "nanocomponent": "^6.5.2",
+    "node-quill-converter": "^0.3.2",
     "orcid-utils": "^1.0.3",
     "passport": "^0.4.0",
     "passport-orcid": "0.0.3",
