user profile + logout + add preprint

--- a/package.json
+++ b/package.json
@@ -33,16 +33,18 @@
     "deepdash": "^4.2.10",
     "doi-regex": "^0.1.10",
     "express": "^4.16.4",
+    "express-formidable": "^1.2.0",
     "express-markdown": "0.0.6",
     "express-session": "^1.16.1",
     "fake-identity": "^1.0.6",
     "fast-xml-parser": "^3.12.17",
     "fetch-base64": "^2.1.2",
     "got": "^9.6.0",
-    "gravatar": "^1.8.0",
     "he": "^1.2.0",
     "helmet": "^3.20.0",
+    "html-metadata": "^1.7.1",
     "hyphenate-style-name": "^1.0.3",
+    "identifiers-arxiv": "^0.1.1",
     "joi": "^14.3.1",
     "keyfinder": "^1.0.0",
     "knex": "^0.19.1",
@@ -53,6 +55,7 @@
     "morgan": "^1.9.1",
     "nano": "^8.1.0",
     "nanocomponent": "^6.5.2",
+    "node-fetch": "^2.6.0",
     "node-quill-converter": "^0.3.2",
     "orcid-utils": "^1.0.3",
     "passport": "^0.4.0",
