pre-27, pre-11, pre-29

--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "morgan": "^1.9.1",
     "nano": "^8.1.0",
     "nanocomponent": "^6.5.2",
+    "ngrok": "^3.2.7",
     "node-fetch": "^2.6.0",
     "node-quill-converter": "^0.3.2",
     "orcid-utils": "^1.0.3",
