--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "pdfjs-dist": "^2.1.266",
     "pg": "^7.12.0",
     "quill": "^1.3.6",
+    "request": "^2.88.0",
     "serve-favicon": "^2.5.0",
     "sql-template-strings": "^2.2.2",
     "tachyons": "^4.11.1",
