--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^6.4.0",
     "animejs": "^3.0.1",
     "babel-polyfill": "^6.26.0",
     "body-parser": "^1.19.0",
