--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "seeddb:dev": "ENVIRONMENT=dev node --max-old-space-size=10000 scripts/seeddb.js",
     "seeddb:prod": "ENVIRONMENT=prod node scripts/seeddb.js",
     "dev": "NODE_ENV=dev ENVIRONMENT=dev nodemon --watch server --max-old-space-size=3200 index.js",
-    "start": "NODE_ENV=prod ENVIRONMENT=prod pm2 start --node-args=\"--max-old-space-size=3200\" --name prereview --log production.log index.js",
+    "start": "NODE_ENV=prod ENVIRONMENT=prod pm2 start --no-daemon --node-args=\"--max-old-space-size=3200\" --name prereview --log production.log index.js",
     "stop": "pm2 stop prereview",
     "restart": "pm2 restart prereview",
     "makedocs": "cd ../documentation && npm run build && cd - && node scripts/makedocs.js"
